--- a/css/employee_home.css
+++ b/css/employee_home.css
@@ -125,6 +125,13 @@ tr:not(:first-child){
     border-radius: 3px;
 }
 
+td{
+    font: normal normal 14px/21px Roboto;
+    letter-spacing: 0px;
+    color: #3d3d3d;
+    border-radius: 3px;
+}
+
 td:first-child{
     display: flex;
     align-items: center;
