--- a/css/employee_form.css
+++ b/css/employee_form.css
@@ -140,15 +140,37 @@ select {
 }
 
 .submitButton{
-    border: none;
     background-color: #f5f5f5;
     margin-right: 30px;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
 }
 
 .cancelButton{
     text-decoration: none;
     text-align: center;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
 }
+
+.resetButton{
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
+}
+
+error-output{
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
+}
+*{box-sizing: border-box;} 
 
 @media only screen and (max-width: 960px){
     .cancelButton{
@@ -201,10 +223,3 @@ select {
         padding: 44px 20px;
     }
 }
-error-output{
-    margin-left: 10px;
-    font-size: 12px;
-    font-style: italic;
-    color: red;
-}
-*{box-sizing: border-box;} 
